codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---














• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.
Ask anything... "Fix a TODO in the codebase"
Working (0s • esc to interrupt)
